tests/baselines/reference/parserIndexSignature4.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,3): error TS1169: Computed property names are not allowed in interfaces.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,4): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts (2 errors) ====
    interface I {
      [a = 0] // Used to be indexer, now it is a computed property
      ~~~~~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
       ~
!!! error TS2304: Cannot find name 'a'.
    }